--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 
 @tailwind utilities;
 
+
+@custom-variant dark (&:where(.dark, .dark *));
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -59,7 +62,9 @@ input:focus-visible{
   object-fit: cover;
   
 }
-
+.text-white{
+  color: #fff;
+}
 input[type="radio"]:checked + label span {
 background-color: #fff; 
 box-shadow: 0px 0px 0px 2px black inset;
